--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@primeuix/themes": "^1.2.3",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.9",
