--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@primeuix/themes": "^1.2.3",
+    "@vueuse/core": "^13.9.0",
     "alertifyjs": "^1.14.0",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
@@ -23,7 +24,8 @@
     "primevue": "^4.3.9",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
