--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.8",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
+    "fuse.js": "^7.1.0",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.9",
